@@ -48,8 +48,7 @@
 	<pre> apt-get install libmysqlclient. </pre>
 	<ul>
 		<li> g++ </li>
-		<li> libmysqlclient </li>
-		<li> ibmysqlclient-dev</li>
+		<li> libmysqlclient-dev</li>
 		<li> libx11-dev</li>
 		<li> libxext</li>
 		<li> libxext-dev</li>
@@ -157,6 +156,7 @@ cd $JLAB_ROOT/$JLAB_VERSION/install
 ./go_geant4
 ./go_sconsscript
 ./go_evio
+./go_mysql
 ./go_ccdb
 ./go_gemc
 ./go_fields
