@@ -4,6 +4,11 @@
 
  -------------------------------------------
 
+11/30/15
+- improved instructions on go_qt
+- fixed date for this release
+- improved installation instructions
+
 11/24/15
 - switched to the latest version of root5: 5.34.34
 - switched to the latest version of ccdb: 1.05
